Fixed a styling bug where on mobile, the image items wouldn't extend to the bottom of the page, hiding part of the description

--- a/frontend/src/Pages/HomePage.module.scss
+++ b/frontend/src/Pages/HomePage.module.scss
@@ -9,6 +9,7 @@
 
 @media (max-width: $media-width) {
   .cards {
+    height: 100%;
     display: flex;
     flex-direction: column;
     row-gap: 15rem;
